--- a/camaracomercio/camara/template/master.html
+++ b/camaracomercio/camara/template/master.html
@@ -119,7 +119,7 @@
                             <!-- Menú para admin/superuser -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-bs-toggle="dropdown">
-                                    <i class="fas fa-user-shield me-1"></i>{{ user.first_name|default:user.username }}
+                                    <i class="fas fa-user-shield me-1"></i>{{ user.nombre|default:user.first_name|default:user.username }}
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="/admin/">Panel Admin</a></li>
@@ -131,7 +131,7 @@
                             <!-- Menú para usuarios normales -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                    <i class="fas fa-user me-1"></i>{{ user.first_name|default:user.username }}
+                                    <i class="fas fa-user me-1"></i>{{ user.nombre|default:user.first_name|default:user.username }}
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
